Sutter Health/src/objects/Customer_Interaction_Field_Set__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Section__c</fullName>
        <label>Closed Section</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Interaction_Detail_2__c</fullName>
        <label>Customer Interaction Detail 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Interaction_Detail__c</fullName>
        <label>Customer Interaction Detail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Information__c</fullName>
        <label>Description Information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Set_Name__c</fullName>
        <label>Field Set Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Details__c</fullName>
        <label>Interaction Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Calling_Information__c</fullName>
        <label>Manager Calling Information</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Lists__c</fullName>
        <label>Related Lists</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Information__c</fullName>
        <label>System Information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Customer Interaction-Field Set</label>
</CustomObject>